src/objects/CPQ_Direct_Pricing__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for opening the Direct Pricing App</description>
    <fields>
        <fullName>AppId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AppId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PluginUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PluginUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionflowName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>actionflowName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hostUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>hostUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ Direct Pricing</label>
</CustomObject>